# Floresta

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  flake.nix  justfile  pyproject.toml  rust-toolchain.toml  typos.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  benchmarks.yml  commits.yml  docker.yml  functional.yml  fuzz.yml  rust.yml  zizmor.yml
contrib/: clean_data.sh  commit-signatures.sh  config.toml.sample  env.docker.sample  feature_matrix.sh  install.sh  make_seeds.py
contrib/docker/: Dockerfile  docker-compose.yml
crates/floresta/: Cargo.toml  README.md
crates/floresta-chain/: Cargo.toml
crates/floresta-chain/benches/: chain_state_bench.rs
crates/floresta-chain/src/: extensions.rs  lib.rs
crates/floresta-chain/src/pruned_utreexo/: chain_state.rs  chain_state_builder.rs  chainparams.rs  chainstore.rs  consensus.rs  error.rs  flat_chain_store.rs  mod.rs  partial_chain.rs  udata.rs
crates/floresta-chain/tests/: transaction_tests.rs  util.rs
crates/floresta-common/: Cargo.toml
crates/floresta-common/src/: ema.rs  lib.rs  macros.rs  spsc.rs
crates/floresta-compact-filters/: Cargo.toml
crates/floresta-compact-filters/src/: flat_filters_store.rs  lib.rs  network_filters.rs
crates/floresta-domain/: Cargo.toml
crates/floresta-domain/src/: lib.rs
crates/floresta-domain/src/mempool/: error.rs  mempool_backend.rs  mempool_base.rs  mod.rs
crates/floresta-electrum/: Cargo.toml
crates/floresta-electrum/src/: electrum_protocol.rs  error.rs  lib.rs  request.rs
crates/floresta-mempool/: Cargo.toml
crates/floresta-mempool/src/: lib.rs  mempool.rs
crates/floresta-metrics/: Cargo.toml
crates/floresta-metrics/src/: lib.rs
crates/floresta-node/: Cargo.toml
crates/floresta-node/src/: config_file.rs  error.rs  florestad.rs  lib.rs  slip132.rs  wallet_input.rs  zmq.rs
crates/floresta-node/src/json_rpc/: blockchain.rs  control.rs  mod.rs  network.rs  request.rs  res.rs  server.rs
crates/floresta-rpc/: Cargo.toml
crates/floresta-rpc/src/: jsonrpc_client.rs  lib.rs  rpc.rs  rpc_types.rs
crates/floresta-watch-only/: Cargo.toml
crates/floresta-watch-only/src/: kv_database.rs  lib.rs  memory_database.rs  merkle.rs
crates/floresta-watch-only/src/descriptor/: mod.rs  slip132.rs
crates/floresta-wire/: Cargo.toml  README.md
crates/floresta-wire/seeds/: mainnet_seeds.json  signet_seeds.json  testnet_seeds.json
crates/floresta-wire/src/: lib.rs
crates/floresta-wire/src/p2p_wire/: address_man.rs  bitcoin_socket_addr.rs  block_proof.rs  chain_selector.rs  error.rs  mod.rs  network_message_ext.rs  node.rs  node_context.rs  node_handle.rs  node_interface.rs  onion.rs  peer.rs  running_node.rs  socks.rs  sync_node.rs  transport.rs
crates/floresta-wire/src/p2p_wire/node/: blocks.rs  chain_selector_ctx.rs  conn.rs  mod.rs  peer_man.rs  running_ctx.rs  sync_ctx.rs  user_req.rs
crates/floresta-wire/src/p2p_wire/seeds/: mainnet_seeds.json  signet_seeds.json  testnet4_seeds.json
crates/floresta-wire/src/p2p_wire/tests/: chain_selector.rs  mod.rs  sync_node.rs  utils.rs
crates/floresta/examples/: chainstate-builder.rs  chainstate.rs  indexer.rs  node.rs  watch-only.rs  watch_only.rs
crates/floresta/src/: lib.rs
doc/: build-macos.md  docker.md  metrics.md  nix.md  roadmap-2026.md  run.md  running-tests.md
doc/rpc/: addnode.md  disconnectnode.md  getaddrmaninfo.md  getblock.md  getblockchaininfo.md  getblockheader.md  getconnectioncount.md  getdeploymentinfo.md  getdifficulty.md  getnetworkinfo.md  getpeerinfo.md  getroots.md  ping.md  stop.md  template.md  uptime.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: addrman.rs  best_chain_decode.rs  best_chain_roundtrip.rs  bitcoin_socket_addr.rs  disk_block_header_decode.rs  disk_block_header_roundtrip.rs  flat_chainstore_header_insertion.rs  local_address_str.rs  onion_address_rtt.rs  onion_address_str_parse.rs  utreexo_proof_des.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
tests/: conftest.py  prepare.sh  requirements.txt  run.sh  test_runner.py
tests/example/: bitcoin.py  electrum.py  functional.py  integration.py  utreexod.py
tests/floresta-cli/: addnode-v1.py  addnode-v2.py  addnode.py  disconnectnode.py  getaddrmaninfo.py  getbestblockhash.py  getblock.py  getblockchaininfo.py  getblockcount.py  getblockhash.py  getblockheader.py  getconnectioncount.py  getdeploymentinfo.py  getdifficulty.py  getmemoryinfo.py  getnetworkinfo.py  getpeerinfo.py  getroots.py  getrpcinfo.py  gettxout.py  ping.py  stop.py  uptime.py
tests/florestad/: connect.py  node-info.py  node_info.py  reorg-chain.py  reorg_chain.py  restart.py  rpcserver_request_parsing.py  tls.py
tests/p2p/: p2p_addr_relay.py  p2p_resilience.py
tests/test_framework/: __init__.py  bitcoin.py  constants.py  key.py  messages.py  netutil.py  node.py  p2p.py  util.py  v2_p2p.py
tests/test_framework/crypto/: bip324_cipher.py  chacha20.py  ellswift.py  pkcs8.py  poly1305.py  siphash.py
tests/test_framework/daemon/: __init__.py  base.py  bitcoin.py  floresta.py  utreexo.py
tests/test_framework/electrum/: __init__.py  base.py  client.py
tests/test_framework/rpc/: __init__.py  base.py  bitcoin.py  exceptions.py  floresta.py  utreexo.py
