[project]
name = "floresta-functional-tests"
version = "0.0.3"
description = "Collection of tools to help with the functional tests of Floresta"
authors = [{ name = "The Floresta Project Developers" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "jsonrpclib>=0.2.1",
  "requests>=2.32.3",
  "black>=26.3.1",
  "pylint>=3.3.2",
  "cryptography>=46.0.5",
  "pyOpenSSL>=25.0.0",
  "pytest>=9.0.0",
  "pytest-xdist>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tests/test_framework"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_files = ["*/*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-v",
    "-n 4",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--log-cli-level=DEBUG",
    "-q",
    "--show-capture=no",
    "-x"
]

markers = [
    "example: marks tests that demonstrate how to use the Floresta test framework",
    "florestad: marks tests specific to the Florestad daemon",
    "rpc: marks tests focused on RPC calls",
]

minversion = "9.0"

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestCollectionWarning"
]