[package]
name = "floresta-fuzz"
version = "0.1.0"
license.workspace = true
publish = false
rust-version.workspace = true
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
# All dependencies MUST be pinned precisely with `X.Y.z`
arbitrary = { version = "=1.4.2", features = ["derive"] }
bitcoin = { workspace = true }
libfuzzer-sys = "=0.4.12"
tempfile = { workspace = true }

# Local dependencies
floresta-chain = { workspace = true, features = ["flat-chainstore"] }
floresta-wire = { workspace = true }

[[bin]]
name = "local_address_str"
path = "fuzz_targets/local_address_str.rs"
test = false
doc = false
bench = false

[[bin]]
name = "utreexo_proof_des"
path = "fuzz_targets/utreexo_proof_des.rs"
test = false
doc = false
bench = false

[[bin]]
name = "addrman"
path = "fuzz_targets/addrman.rs"
test = false
doc = false
bench = false

[[bin]]
name = "best_chain_decode"
path = "fuzz_targets/best_chain_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "flat_chainstore_header_insertion"
path = "fuzz_targets/flat_chainstore_header_insertion.rs"
test = false
doc = false
bench = false

[[bin]]
name = "best_chain_roundtrip"
path = "fuzz_targets/best_chain_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "disk_block_header_decode"
path = "fuzz_targets/disk_block_header_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "disk_block_header_roundtrip"
path = "fuzz_targets/disk_block_header_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bitcoin_socket_addr"
path = "fuzz_targets/bitcoin_socket_addr.rs"
test = false
doc = false
bench = false

[[bin]]
name = "onion_address_rtt"
path = "fuzz_targets/onion_address_rtt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "onion_address_str_parse"
path = "fuzz_targets/onion_address_str_parse.rs"
test = false
doc = false
bench = false

[lints]
workspace = true
