[package]
name = "metrics"
version = "0.2.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# All dependencies MUST be pinned precisely with `X.Y.z`
axum = { workspace = true }
prometheus-client = { version = "=0.24.1" }
sysinfo = { version = "=0.36.1", default-features = false, features = ["system"] }
tokio = { workspace = true }

[lints]
workspace = true
