[package]
name = "floresta-electrum"
version = "0.5.0"
rust-version.workspace = true
edition.workspace = true
authors = ["Floresta Developers <contact@getfloresta.org>"]
description = """
    A simple Electrum server implementation for Floresta. It is based on the
    Electrum protocol specification and works out of the box with any wallet
    that supports Electrum servers.
"""
repository = "https://github.com/getfloresta/Floresta"
license.workspace = true
readme.workspace = true # Floresta/README.md
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
# All dependencies MUST be pinned precisely with `X.Y.z`
bitcoin = { workspace = true }
rustreexo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }

# Local dependencies
floresta-chain = { workspace = true, features = ["bitcoinkernel"] }
floresta-compact-filters = { workspace = true }
floresta-common = { workspace = true }
floresta-watch-only = { workspace = true }
floresta-wire = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rcgen = { workspace = true }
zstd = { workspace = true }

# Local dev-dependencies
floresta-chain = { workspace = true, features = ["flat-chainstore"] }
floresta-mempool = { workspace = true }

[lints]
workspace = true
