[package]
name = "floresta-mempool"
version = "0.5.0"
rust-version.workspace = true
edition.workspace = true
authors = ["Floresta Developers <contact@getfloresta.org>"]
description = """
    A policy-driven, stateful transaction mempool for Floresta,
    responsible for transaction relay decisions, fee estimation, and
    block template construction.
"""
repository = "https://github.com/getfloresta/Floresta"
license.workspace = true
readme.workspace = true
keywords = ["bitcoin", "mempool", "transactions"]

[dependencies]
# All dependencies MUST be pinned precisely with `X.Y.z`
ahash = { version = "=0.8.12", default-features = false }
bitcoin = { workspace = true }
rand = { workspace = true }
rustreexo = { workspace = true }
tracing = { workspace = true }

# Local dependencies
floresta-chain = { workspace = true }
floresta-domain = { workspace = true }

[dev-dependencies]
floresta-common = { workspace = true }

[features]
default = []

[lints]
workspace = true
