[package]
name = "floresta-watch-only"
version = "0.5.0"
rust-version.workspace = true
edition.workspace = true
description = "A simple, lightweight and Electrum-First, watch-only wallet"
authors = ["Floresta Developers <contact@getfloresta.org>"]
keywords = ["bitcoin", "watch-only", "electrum-server"]
categories = ["cryptography::cryptocurrencies"]
license.workspace = true
repository = "https://github.com/getfloresta/Floresta"
readme.workspace = true # Floresta/README.md

[dependencies]
bitcoin = { workspace = true, features = ["serde"] }
kv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
tracing = { workspace = true }
miniscript = { workspace = true, features = ["compiler", "std"] }

# Local dependencies
floresta-chain = { workspace = true }
floresta-common = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[features]
default = ["std"]
memory-database = []
# The default features in common are `std` and `descriptors-std` (which is a superset of `descriptors-no-std`)
std = ["floresta-common/default", "serde/std"]

[lints]
workspace = true
