[package]
name = "floresta-wire"
version = "0.5.0"
rust-version.workspace = true
edition.workspace = true
authors = ["Floresta Developers <contact@getfloresta.org>"]
description = """
    Some utreexo-aware wire protocol for floresta. You can use this crate
    to fetch blocks and transactions from the network, and to broadcast
    your own transactions.
"""
repository = "https://github.com/getfloresta/Floresta"
license.workspace = true
readme = "README.md"
keywords = ["bitcoin", "utreexo", "p2p", "networking"]
categories = ["cryptography::cryptocurrencies", "network-programming"]

[dependencies]
# All dependencies MUST be pinned precisely with `X.Y.z`
bip324 = { version = "=0.10.0", features = [ "tokio" ] }
bitcoin = { workspace = true, features = ["serde"] }
dns-lookup = { workspace = true }
rand = { workspace = true }
rustls = { version = "=0.23.40", default-features = false, features = ["ring", "std", "tls12"] }
rustreexo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
ureq = { version = "=3.3.0", features = ["socks-proxy", "json", "rustls-no-provider"], default-features = false }
tonic = { workspace = true }
tonic-prost = { workspace = true }

# Local dependencies
floresta-chain = { workspace = true, features = ["flat-chainstore"] }
floresta-compact-filters = { workspace = true }
floresta-common = { workspace = true }
floresta-domain = { workspace = true }
metrics = { workspace = true,  optional = true }

[dev-dependencies]
zstd = { workspace = true }
derive_more = { version = "=2.1.1", features = ["constructor"] }

# Local dev-dependencies
floresta-mempool = { workspace = true }

[features]
default = []
metrics = ["dep:metrics"]

[lints]
workspace = true
