[package]
name = "floresta"
version = "0.5.0"
description = "A modular and extensible framework for building Utreexo-based Bitcoin nodes"
authors = ["Floresta Developers <contact@getfloresta.org>"]
homepage = "https://github.com/getfloresta/Floresta"
documentation = "https://docs.rs/floresta"
repository = "https://github.com/getfloresta/Floresta"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
license.workspace = true
readme = "README.md"
rust-version.workspace = true # MSRV
edition.workspace = true

[[example]]
name = "chainstate"
path = "examples/chainstate.rs"
required-features = ["chain-flat-chainstore"]

[[example]]
name = "indexer"
path = "examples/indexer.rs"
required-features = ["chain-flat-chainstore"]

[[example]]
name = "node"
path = "examples/node.rs"
required-features = ["chain-flat-chainstore", "mempool", "wire"]

[[example]]
name = "watch-only"
path = "examples/watch_only.rs"
required-features = ["common", "watch-only-memory-database"]

[dependencies]
floresta-chain = { path = "../floresta-chain", optional = true, default-features = false }
floresta-common = { path = "../floresta-common", optional = true, default-features = false }
floresta-compact-filters = { path = "../floresta-compact-filters", optional = true, default-features = false }
floresta-domain = { path = "../floresta-domain", optional = true, default-features = false }
floresta-electrum = { path = "../floresta-electrum", optional = true, default-features = false }
floresta-mempool = { path = "../floresta-mempool", optional = true, default-features = false }
floresta-metrics = { path = "../floresta-metrics", optional = true, default-features = false }
floresta-node = { path = "../floresta-node", optional = true, default-features = false }
floresta-rpc = { path = "../floresta-rpc", optional = true, default-features = false }
floresta-watch-only = { path = "../floresta-watch-only", optional = true, default-features = false }
floresta-wire = { path = "../floresta-wire", optional = true, default-features = false }

[dev-dependencies]
bitcoin = { workspace = true }
miniscript = { workspace = true, features = ["std"] }
rustreexo = { workspace = true }
tokio = { workspace = true }

[features]
# No default features: consumers must be explicit
# in what library components they wish to use
default = []

# All features exported from each crate
full = [
    "chain-bitcoinkernel",
    "chain-flat-chainstore",
    "common-std",
    "compact-filters",
    "domain",
    "electrum",
    "mempool",
    "metrics",
    "node-json-rpc",
    "rpc-jsonrpc",
    "watch-only-std",
    "wire",
]

# floresta-chain
chain = ["dep:floresta-chain"]
chain-bitcoinkernel = ["chain", "floresta-chain/bitcoinkernel"]
chain-flat-chainstore = ["chain", "floresta-chain/flat-chainstore"]
chain-metrics = ["chain", "floresta-chain/metrics"]

# floresta-common
common = ["dep:floresta-common"]
common-std = ["common", "floresta-common/std"]

# floresta-compact-filters
compact-filters = ["dep:floresta-compact-filters"]

# floresta-domain
domain = ["dep:floresta-domain"]

# floresta-electrum
electrum = ["dep:floresta-electrum"]

# floresta-mempool
mempool = ["dep:floresta-mempool"]

# floresta-metrics
metrics = ["dep:floresta-metrics"]

# floresta-node
node = ["dep:floresta-node"]
node-compact-filters = ["node", "compact-filters", "floresta-node/compact-filters"]
node-json-rpc = ["node", "floresta-node/json-rpc"]
node-metrics = ["node", "metrics", "chain-metrics", "wire-metrics", "floresta-node/metrics"]
node-zmq-server = ["node", "floresta-node/zmq-server"]

# floresta-rpc
rpc = ["dep:floresta-rpc"]
rpc-clap = ["rpc", "floresta-rpc/clap"]
rpc-jsonrpc = ["rpc", "floresta-rpc/with-jsonrpc"]

# floresta-watch-only
watch-only = ["dep:floresta-watch-only"]
watch-only-memory-database = ["watch-only", "floresta-watch-only/memory-database"]
watch-only-std = ["watch-only", "floresta-watch-only/std"]

# floresta-wire
wire = ["dep:floresta-wire"]
wire-metrics = ["wire", "metrics", "floresta-wire/metrics"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
